--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ img {
   padding: 2rem;
 }
 .hero-section {
-  background: url('..videos/tell em _ valorant edit.mp4') no-repeat center center/cover;
+  background: url('') no-repeat center center/cover;
   height: 90vh;
   display: flex;
   align-items: center;
